--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0-alpha03'
     // circle imageview
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
+    implementation 'me.relex:circleindicator:2.1.6'
 }
