--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,24 @@
         android:theme="@style/Theme.DuAn1"
         tools:targetApi="31">
         <activity
+            android:name=".chonDanhMucDienMayActivity"
+            android:exported="false" />
+        <activity
+            android:name=".chonDanhMucGiaiTriActivity"
+            android:exported="false" />
+        <activity
+            android:name=".chonDanhMucDoDienTuActivity"
+            android:exported="false" />
+        <activity
+            android:name=".chonDanhMucThoiTrangAcrivity"
+            android:exported="false" />
+        <activity
+            android:name=".chonDanhMucXeCoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".chonDanhMucBDSActivity"
+            android:exported="false" />
+        <activity
             android:name=".Register"
             android:exported="false">
             <meta-data
