--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:31.1.0')
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-storage'
+    implementation 'com.google.firebase:firebase-database'
     implementation 'com.facebook.android:facebook-login:latest.release'
 
     testImplementation 'junit:junit:4.13.2'
@@ -54,5 +55,8 @@ dependencies {
 
 //picaso
     implementation 'com.squareup.picasso:picasso:2.5.2'
+
+    //galery
+    implementation 'io.github.ParkSangGwon:tedpermission-normal:3.3.0'
 
 }
