--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'com.google.gms.google-services'
+
 }
 
 android {
@@ -39,6 +40,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage'
     implementation 'com.google.firebase:firebase-database'
     implementation 'com.facebook.android:facebook-login:latest.release'
+    implementation 'com.google.firebase:firebase-database:20.1.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -58,5 +60,9 @@ dependencies {
 
     //galery
     implementation 'io.github.ParkSangGwon:tedpermission-normal:3.3.0'
+
+
+//    add multiple Image lagerMb
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
 
 }
