--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,5 +64,8 @@ dependencies {
 
 //    add multiple Image lagerMb
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+//    //noinspection OutdatedLibrary
+    implementation 'com.google.firebase:firebase-appcheck-playintegrity:16.1.0'
+
 
 }
