--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
         android:theme="@style/Theme.DuAn1"
         tools:targetApi="31">
         <activity
+            android:name=".listUserActivity"
+            android:exported="false" />
+        <activity
             android:name=".dagTinGiaiTriActivity"
             android:exported="false" />
         <activity
