--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,6 @@ dependencies {
     // circle imageview
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
-
 // auto sliderImage
     implementation 'me.relex:circleindicator:2.1.6'
     implementation 'com.github.bumptech.glide:glide:4.14.2'
@@ -61,11 +60,12 @@ dependencies {
     //galery
     implementation 'io.github.ParkSangGwon:tedpermission-normal:3.3.0'
 
-
 //    add multiple Image lagerMb
     implementation 'com.github.bumptech.glide:glide:4.12.0'
 //    //noinspection OutdatedLibrary
     implementation 'com.google.firebase:firebase-appcheck-playintegrity:16.1.0'
+
+    implementation "androidx.cardview:cardview:1.0.0"
 
 
 }
